<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_single_surgery"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing5"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/surgery_name"
        style="@style/AppLabel.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sinle_surgery_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/surgery_date"
        style="@style/AppLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_surgery_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surgery_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/surgery_instruments"
        style="@style/AppLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:maxLines="10"
        android:text="@string/single_surgery_instruments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surgery_date"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/surgery_instruments_check"
        style="@style/AppLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:maxLines="10"
        android:text="@string/single_surgery_instruments_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surgery_instruments"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/surgery_instruments_not_checked"
        style="@style/AppLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:maxLines="10"
        android:text="@string/single_surgery_instruments_not_checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surgery_instruments_check"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surgery_instruments_not_checked"/>

</androidx.constraintlayout.widget.ConstraintLayout>

