<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kamilmosz.projektinzynierski.Fragments.SurgeryStartedFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/start_surgery_textview"
        style="@style/WelcomeLabel"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:text="@string/still_in_use"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@drawable/options_color_selector" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/end_surgery_textview"
        style="@style/WelcomeLabel"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:text="@string/all_instruments_scanned_off"
        android:singleLine="false"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@drawable/options_color_selector" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scanned_items_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wrap_constraint"
        app:layout_constraintTop_toBottomOf="@id/start_surgery_textview"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start_surgery_button"
        android:text="@string/end_surgery"
        style="@style/LoginLabel.White"
        android:background="@color/colorMySecondaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>