<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseActionActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineBelowTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineAfterLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/whatActionLabel"
        style="@style/WelcomeLabel.Bold"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:text="@string/app_what_action"
        app:layout_constraintEnd_toStartOf="@id/guideLineRight"
        app:layout_constraintStart_toStartOf="@id/guideLineLeft"
        app:layout_constraintTop_toTopOf="@id/guideLineTop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/newSurgeryLabel"
        style="@style/WelcomeLabel"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_arrow"
        android:text="@string/app_new_surgery"
        android:textColor="@drawable/options_color_selector"
        app:layout_constraintEnd_toStartOf="@id/guideLineRight"
        app:layout_constraintStart_toStartOf="@id/guideLineAfterLeft"
        app:layout_constraintTop_toBottomOf="@id/guideLineBelowTop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/browseSurgeriesLabel"
        style="@style/WelcomeLabel"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_arrow"
        android:layout_marginTop="@dimen/spacing16"
        android:text="@string/app_browse_surgeries"
        android:textColor="@drawable/options_color_selector"
        app:layout_constraintEnd_toStartOf="@id/guideLineRight"
        app:layout_constraintStart_toStartOf="@id/guideLineAfterLeft"
        app:layout_constraintTop_toBottomOf="@id/newSurgeryLabel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editInstrumentsLabel"
        style="@style/WelcomeLabel"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_arrow"
        android:layout_marginTop="@dimen/spacing16"
        android:text="@string/app_edit_instruments"
        android:textColor="@drawable/options_color_selector"
        app:layout_constraintEnd_toStartOf="@id/guideLineRight"
        app:layout_constraintStart_toStartOf="@id/guideLineAfterLeft"
        app:layout_constraintTop_toBottomOf="@id/browseSurgeriesLabel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutButton"
        style="@style/LoginLabel.Gray"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:text="@string/logout_string"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@id/guideLineBottom"
        app:layout_constraintEnd_toStartOf="@id/guideLineRight" />

</androidx.constraintlayout.widget.ConstraintLayout>